fix vertical spacing issues

--- a/src/client/App.css
+++ b/src/client/App.css
@@ -14,7 +14,7 @@ h1 {
     display: grid;
     width: 100%;
     height: 200vh;
-    grid-template-rows: 1fr 1fr 1fr 1fr ;
+    grid-template-rows: min-content min-content min-content min-content;
     grid-template-columns: 1fr min-content min-content 1fr;
 }
 
